[gd_scene load_steps=4 format=3 uid="uid://c8aw4ikafti1e"]

[ext_resource type="Script" uid="uid://bkay4x0skl30x" path="res://scenes/ui/card_display.gd" id="1_a8nah"]
[ext_resource type="Resource" uid="uid://cyw4233ngdw8l" path="res://cards/hit_and_block.tres" id="2_6jqm1"]
[ext_resource type="PackedScene" uid="uid://gp5v1kbe3lnj" path="res://scenes/ui/card_visuals.tscn" id="3_6jqm1"]

[node name="CardDisplay" type="CenterContainer"]
offset_right = 75.0
offset_bottom = 106.0
size_flags_horizontal = 3
script = ExtResource("1_a8nah")
card_data = ExtResource("2_6jqm1")

[node name="Visuals" parent="." instance=ExtResource("3_6jqm1")]
layout_mode = 2

[connection signal="gui_input" from="Visuals" to="." method="_on_visuals_gui_input"]
[connection signal="mouse_entered" from="Visuals" to="." method="_on_visuals_mouse_entered"]
[connection signal="mouse_exited" from="Visuals" to="." method="_on_visuals_mouse_exited"]
